[gd_scene load_steps=6 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Mob.tscn" type="PackedScene" id=3]
[ext_resource path="res://Labels.tscn" type="PackedScene" id=4]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -1, -4, 0, 0, 0, 0, 1, 800, 0, 0, 0, 0, 802, 799, 0, 0, 0, 0, 799, -1, 0, 0, 0, 0, -1, -4 )
}

[node name="Main" type="Node"]
script = ExtResource( 1 )
Mob = ExtResource( 3 )
time_left = 90

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MobSpawnLocations" type="PathFollow2D" parent="MobPath"]
position = Vector2( -1, -4 )
rotation = 1.56831

[node name="MobTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="GameTimer" type="Timer" parent="."]
wait_time = 90.0
one_shot = true

[node name="Labels" parent="." instance=ExtResource( 4 )]

[node name="Player" parent="." instance=ExtResource( 2 )]

[node name="Countdown" type="Timer" parent="."]

[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
[connection signal="start_game" from="Labels" to="." method="_on_Labels_start_game"]
[connection signal="start_game" from="Labels" to="." method="start_game"]
[connection signal="hit" from="Player" to="." method="_game_over"]
[connection signal="timeout" from="Countdown" to="." method="_on_Countdown_timeout"]
